fix: various issues. code cleanup