@@ -21,11 +21,11 @@ public class MultilineTooltip {
 			return Component.empty();
 		}
 		if (components.size() == 1) {
-			return components.get(0);
+			return components.getFirst();
 		}
 		Component linebreak = Component.literal("\n");
 		return components.stream().skip(1).reduce(
-				components.get(0).copy(),
+				components.getFirst().copy(),
 				(a, b) -> a.append(linebreak).append(b),
 				(a, b) -> a.append(linebreak).append(b));
 	}
